--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@ name = "raytrace"
 version = "0.1.0"
 authors = ["Eli Treuherz <eli@treuherz.co.uk>"]
 edition = "2018"
+
+[dependencies]
+num = "0.3"
