--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ itertools = "0.10"
 lazy_static = "1.4"
 rand = "0.8"
 rand_distr = "0.4"
+rayon = "1.5"
 
 [dependencies.indicatif]
 git = "https://github.com/mitsuhiko/indicatif"
 branch = "main"
-features = ["improved_unicode"]
+features = ["improved_unicode", "rayon"]
