--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ lazy_static = "1.4"
 rand = "0.8"
 rand_distr = "0.4"
 rayon = "1.5"
+webp = "*"
 
 [dependencies.indicatif]
 git = "https://github.com/mitsuhiko/indicatif"
