--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,10 @@ authors = ["Eli Treuherz <eli@treuherz.co.uk>"]
 edition = "2018"
 
 [dependencies]
+indicatif = {version = "0.16", features = ["improved_unicode", "rayon"]}
 itertools = "0.10"
 lazy_static = "1.4"
 rand = "0.8"
 rand_distr = "0.4"
 rayon = "1.5"
 webp = "*"
-
-[dependencies.indicatif]
-git = "https://github.com/mitsuhiko/indicatif"
-branch = "main"
-features = ["improved_unicode", "rayon"]
